--- a/pickmeup/src/main/res/layout/route_item.xml
+++ b/pickmeup/src/main/res/layout/route_item.xml
@@ -5,101 +5,182 @@
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    card_view:cardPreventCornerOverlap="false"
     android:clickable="true"
+    card_view:cardCornerRadius="4dp"
+    card_view:cardPreventCornerOverlap="false"
     card_view:cardUseCompatPadding="true"
-    card_view:cardCornerRadius="4dp">
+>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
-            android:layout_width="fill_parent"
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            android:id="@+id/imgDestination"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:textColor="@android:color/darker_gray"
-        />
+            android:orientation="horizontal"
+          >
+            <TextView
+                android:id="@+id/txtDepartureName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="10"
+                android:padding="5dp"
+                android:text="Belatrix - San Isidro2222"
+                android:textColor="@android:color/darker_gray"/>
 
 
-        <TextView
-            android:id="@+id/txtDeparture"
-            android:layout_width="wrap_content"
+            <ImageView
+                android:id="@+id/imgArrow"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/txtDepartureName"
+                android:layout_weight="1"
+                android:background="@drawable/ic_arrow_forward_black_24dp"
+                />
+
+
+            <TextView
+                android:id="@+id/txtDestinationName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="10"
+                android:padding="5dp"
+                android:text="San Borja"
+                android:textColor="@android:color/darker_gray"/>
+
+
+        </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginBottom="5dp"
+
+        android:background="@android:color/darker_gray"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/imgDestination"
-            android:padding="15dp"
-            android:text="S"
-            android:textColor="@android:color/darker_gray"/>
+            android:orientation="horizontal"
+            >
 
-        <TextView
-            android:id="@+id/txtDestination"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/txtDeparture"
-            android:padding="15dp"
-            android:text="D"
-            android:textColor="@android:color/darker_gray"/>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                >
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="15dp"
+                    >
+
+                    <ImageView
+                        android:id="@+id/imageTime"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ic_access_time_black_24dp"
+                        android:padding="15dp"            />
+
+                    <TextView
+                        android:id="@+id/txtDepartureTime"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="15dp"
+                        android:layout_centerVertical="true"
+                        android:layout_toRightOf="@+id/imageTime"
+                        android:text="5:30 pm"
+                        />
+                </RelativeLayout>
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="15dp"
+                    >
+                    <ImageView
+                        android:id="@+id/imageContact"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ic_account_circle_black_24dp"
+                        android:padding="15dp"            />
+
+                    <TextView
+                        android:id="@+id/txtUserName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="15dp"
+                        android:layout_centerVertical="true"
+                        android:layout_toRightOf="@+id/imageContact"
+                        android:text="Juan Perez"
+                        />
+                </RelativeLayout>
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="15dp"
+                    >
+                    <ImageView
+                        android:id="@+id/imageBill"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/ic_payment_black_24dp"
+                        android:padding="15dp"            />
+                    <TextView
+                            android:id="@+id/txtPrice"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="15dp"
+                        android:layout_centerVertical="true"
+                        android:layout_toRightOf="@+id/imageBill"
+                        android:text="S/ 5.00"
+                        />
+                </RelativeLayout>
+
+    </LinearLayout>
 
 
-        <TextView
-            android:id="@+id/txtDepartureName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/imgDestination"
-            android:layout_toRightOf="@+id/txtDeparture"
-            android:padding="15dp"
-            android:text="Belatrix - San Isidro"
-            android:textColor="@android:color/darker_gray"/>
+            <RelativeLayout
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:paddingRight="15dp"
+                >
+
+                <TextView
+                    android:id="@+id/seatInCircle"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_width="55dip"
+                    android:layout_height="55dip"
+                    android:background="@drawable/ic_seat_in_circle_24dp"/>
+                <TextView
+                    android:id="@+id/txtPlaceAvailable"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignRight="@id/seatInCircle"
+                    android:layout_alignTop="@id/seatInCircle"
+                    android:background="@drawable/badge_circle"
+                    android:text="3"
+                    android:textColor="#FFF"
+                    android:textSize="13sp"
+                    android:textStyle="bold"/>
+            </RelativeLayout>
 
 
-        <TextView
-            android:id="@+id/txtUserName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toLeftOf="@+id/txtPlaceAvailable"
-            android:layout_below="@+id/imgDestination"
-            android:padding="15dp"
-            android:text="Gustavo Zavaleta"
-            android:textColor="@android:color/darker_gray"
-        />
+
+        </LinearLayout>
+
+</LinearLayout>
 
 
-        <TextView
-            android:id="@+id/txtDestinationName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/txtDepartureName"
-            android:layout_toRightOf="@+id/txtDestination"
-            android:padding="15dp"
-            android:text="San Borja"
 
-        />
-
-        <TextView
-            android:id="@+id/txtDepartureTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toLeftOf="@+id/txtPlaceAvailable"
-            android:layout_below="@+id/txtUserName"
-            android:padding="15dp"
-            android:text="5:30 pm"
-        />
-
-        <TextView
-            android:id="@+id/txtPlaceAvailable"
-            android:layout_width="wrap_content"
-            android:layout_below="@+id/imgDestination"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_alignParentRight="true"
-            android:padding="15dp"
-            android:text="3"
-            android:layout_centerVertical="true"
-        />
 
 
     </RelativeLayout>
