--- a/pickmeup/src/main/res/layout/activity_route.xml
+++ b/pickmeup/src/main/res/layout/activity_route.xml
@@ -180,7 +180,25 @@
                 android:text="@string/join"
                 android:textColor="@android:color/white"/>
 
+            <Button
+                android:id="@+id/disjoint_btn"
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/join_btn"
+                android:text="@string/disjoint"
+                android:visibility="gone"
+                android:textColor="@android:color/white"/>
 
+            <Button
+                android:id="@+id/delete_route_btn"
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/disjoint_btn"
+                android:text="@string/delete_route"
+                android:visibility="gone"
+                android:textColor="@android:color/white"/>
 
         </RelativeLayout>
 
