--- a/pickmeup/src/main/res/layout/activity_route.xml
+++ b/pickmeup/src/main/res/layout/activity_route.xml
@@ -103,24 +103,19 @@
                 android:layout_marginBottom="20dp"/>
 
 
-
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/contact_til"
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_below="@+id/payment_method_spn"
-                app:errorEnabled="true"
-                style="@style/addRouteLabel">
+                android:scrollbars="vertical"
+                android:id="@+id/listContacts"
+                />
 
-                <android.support.design.widget.TextInputEditText
-                    android:id="@+id/contact_tiet"
-                    style="@style/addRouteEditText"
-                    android:hint="@string/contact"/>
-
-            </android.support.design.widget.TextInputLayout>
 
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/departure_time_til"
-                android:layout_below="@+id/contact_til"
+                android:layout_below="@+id/listContacts"
                 android:layout_width="290dp"
                 app:errorEnabled="true"
                 android:layout_alignParentLeft="true"
@@ -140,7 +135,7 @@
                 android:background="@drawable/ic_date_range"
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@+id/departure_time_til"
-                android:layout_below="@+id/contact_til"
+                android:layout_below="@+id/listContacts"
                 android:onClick="showTimePickerDialog"
                 android:gravity="right"
                 android:textColor="@android:color/holo_red_light"/>
